--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "homepage": "om-raja-portfolio",
+  "homepage": "https://omraja653.github.io/om-raja-portfolio",
   "name": "om-raja-portfolio",
   "version": "0.1.0",
   "private": true,
+
   "dependencies": {
     "colorthief": "^2.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
-    "gh-pages": "^2.1.1",
     "jest-canvas-mock": "^2.3.1",
     "lottie-react": "^2.4.0",
     "react": "^16.10.2",
@@ -20,19 +20,22 @@
     "react-twitter-embed": "3.0.3",
     "sass": "^1.32.8"
   },
+
   "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "predeploy": "npm run build",
-    "start": "node fetch.js && react-scripts start",
-    "build": "node fetch.js && react-scripts build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write \"./**/*.{js,css,json,scss}\"",
     "check-format": "prettier -c \"./**/*.{js,css,json,scss}\""
   },
+
   "eslintConfig": {
     "extends": "react-app"
   },
+
   "browserslist": {
     "production": [
       ">0.3%",
@@ -50,9 +53,11 @@
       "last 1 safari version"
     ]
   },
+
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "dotenv": "^8.2.0",
+    "gh-pages": "^6.3.0",
     "prettier": "^2.3.1"
   }
 }
